<resources>
    <string name="app_name">Walk In Clinic</string>
    <string name="txtEditUsername">(Enter Username)</string>
    <string name="txtViewUsername">Username</string>
    <string name="txtEditPassword">(Enter Password)</string>
    <string name="txtViewPassword">Password</string>
    <string name="btnCreateAccount">Create Account</string>
    <string name="btnLoggin">Log In</string>
    <string name="txtViewLogginInstructions">Welcome, in this window you are asked to input either your information to log in and press its corresponding \"Log in\" button or input the information you wish to use to create an account and press the corresponding \"create Account\" button.</string>
    <string name="rbtPatient">Patient</string>
    <string name="rbtEmployee">Employee</string>
    <string name="rbtAdmin">Admin</string>
    <string name="txtViewYouAreLoggedInAs">Changing Message</string>
    <string name="txtEditFirstName">First Name</string>
    <string name="txtEditLastName">Last Name</string>
    <string name="txtEditAge">Age</string>
    <string name="rbtMale">Male</string>
    <string name="rbtFemale">Female</string>
    <string name="txtEdit">Street Address</string>
    <string name="txtEditProvince">Province Initials</string>
    <string name="txtEditPostalCode">Postal Code</string>
    <string name="txtEditEmail">Email</string>
    <string name="txtEditPhoneNumber">Phone Number</string>
    <string name="btnCreateAccountPatient"><![CDATA[Create Account & Log-in]]></string>
    <string name="txtEditUsernamePatient">Username</string>
    <string name="txtEditPasswordPatient">Password</string>
    <string name="txtViewMassage" />
    <string name="txtEditEmployeeNumber">Employee Number</string>
    <string name="txtEditSocialInsurance">SSN</string>
    <string name="rbtPartTime">Part-Time</string>
    <string name="rbtFullTime">Full-Time</string>
    <string name="txtEditSuperVisor">Supervisor</string>
    <string name="txtEditDepartment">Department</string>
    <string name="txtEditPosition">Position</string>
    <string name="ok_label">OK</string>
    <string name="dialog_title">Insurance Types</string>
    <string name="dismiss_label">Dismiss</string>
    <string name="api_key">AIzaSyBmKYU-1h6K_qoQDJckAzZpduvsWPgaJts</string>
    <string name="clear_all_label">Clear All</string>
    <string-array name="insurance_types">
        <item>Manulife</item>
        <item>Sunlife Financial</item>
        <item>GreatWest Life</item>
        <item>Blue Cross</item>
        <item>GMS Health Insurance</item>
        <item>Scotia Life Health and Dental</item>
        <item>State Farm</item>
        <item>CAA</item>
        <item>Green Shield Canada</item>
        <item>TD Insurance</item>
        <item>Ivari</item>
    </string-array>
    <string-array name="payment_types">
        <item>Credit</item>
        <item>Debit</item>
        <item>Cash</item>
        <item>E-Transfer</item>
        <item>PayPal</item>
    </string-array>
    <string-array name="times">
        <item>Closed</item>
        <item>12:00</item>
        <item>01:00</item>
        <item>02:00</item>
        <item>03:00</item>
        <item>04:00</item>
        <item>05:00</item>
        <item>06:00</item>
        <item>07:00</item>
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
    </string-array>
    <string-array name="times2">
        <item>12:00</item>
        <item>01:00</item>
        <item>02:00</item>
        <item>03:00</item>
        <item>04:00</item>
        <item>05:00</item>
        <item>06:00</item>
        <item>07:00</item>
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
    </string-array>
    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="time">
        <item>AM</item>
        <item>PM</item>
    </string-array>
    <string-array name="distances">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
    </string-array>
</resources>
